# dmosi

./: .gitignore  CMakeLists.txt  README.md  dmosi.dmr  manifest.dmm
.github/workflows/: build.yml  release.yml
include/: dmosi.h
src/: dmosi.c  dmosi_registrations.c
